--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ ALGORITHM=HS256
 DEMO_RESET=1
 # Ruta del archivo SQLite (Render lo guarda en el sistema de archivos efímero)
 SQLITE_URL=sqlite:///./db.sqlite3
+EMAIL_SENDER="YOUR EMAIL ADDRESS"
+EMAIL_PASSWORD="YOUR PASSWORD EMAIL"
