actualizacion de archivo env de ejemplo

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ DEMO_RESET=1
 SQLITE_URL=sqlite:///./db.sqlite3
 EMAIL_SENDER="YOUR EMAIL ADDRESS"
 EMAIL_PASSWORD="YOUR PASSWORD EMAIL"
+EMAIL_SERVER_HOST="Your Server Hostname"
